--- a/HTML/WebContent/Project/HTML-CSS/Main.html
+++ b/HTML/WebContent/Project/HTML-CSS/Main.html
@@ -2,35 +2,25 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Main</title>
-<link rel="stylesheet" type="text/css" href="./style.css">
+<title>HLP</title>
+<link rel="stylesheet" type="text/css" href="./style_Common.css">
+<link rel="stylesheet" type="text/css" href="./style_1_Main.css">
 </head>
 <body>
-<h2 class="test"> CSS File Text </h2>
-
 	<div class="wrap">
-		<div class="top">
-			<div class="top_menu">
-				<ul class="top_menu_ul">
-					<li><a href="#"><img src="../img/logo.PNG" alt="HLP대학교 로고"></a></li>
-					<li>
-						<a href="#">학교소개</a>
-						<div class="top_menu_sub">
-							<ul>
-								<li><a href="#">인사말</a></li>
-								<li><a href="#">연혁</a></li>
-								<li><a href="#">상징물</a></li>
-								<li><a href="#">오시는 길</a></li>
-							</ul>
-						</div>
-					</li>
-					<li><a href="#">입학정보</a></li>
-					<li><a href="#">대학/대학원</a></li>
-					<li><a href="#">대학생활</a></li>
-				</ul>
-			</div>
+		<div class="top_logo">
+			<a href="./Main.html"><img src="../img/logo.PNG" alt="HLP대학교 로고"></a>
+		</div>
+		<div class="top_menu">
+			<ul>
+				<li><a href="./Menu1_Introduce.html">학교소개</a></li>
+				<li><a href="#">입학정보</a></li>
+				<li><a href="#">대학/대학원</a></li>
+				<li><a href="#">대학생활</a></li>
+			</ul>
 		</div>
 		<div class="main_body">
+			<img src="../img/main.PNG" id="main_body_img" alt="HLP대학교 메인 화면">
 		</div>
 	</div>
 </body>
