--- a/HTML/WebContent/Project/HTML-CSS/1Main.html
+++ b/HTML/WebContent/Project/HTML-CSS/1Main.html
@@ -16,8 +16,8 @@
 			</div>
 			<div class="top_menu">
 				<ul>
-					<li>
-					<a href="./2History.html">푸딩 역사</a></li>
+					<li><a href="./1Main.html"><img src="./img/homeButton.png" alt="홈 버튼"></a></li>
+					<li><a href="./2History.html">푸딩 역사</a></li>
 					<li><a href="./3Kinds.html">푸딩 종류</a></li>
 					<li><a href="./4Lecture.html">강의 등록</a></li>
 					<li><a href="./5Map.html">오시는 길</a></li>
