--- a/HTML/WebContent/Project/HTML-CSS/4Lecture.html
+++ b/HTML/WebContent/Project/HTML-CSS/4Lecture.html
@@ -16,8 +16,8 @@
 			</div>
 			<div class="top_menu">
 				<ul>
-					<li>
-					<a href="./2History.html">푸딩 역사</a></li>
+					<li><a href="./1Main.html"><img src="./img/homeButton.png" alt="홈 버튼"></a></li>
+					<li><a href="./2History.html">푸딩 역사</a></li>
 					<li><a href="./3Kinds.html">푸딩 종류</a></li>
 					<li><a href="./4Lecture.html">강의 등록</a></li>
 					<li><a href="./5Map.html">오시는 길</a></li>
@@ -34,10 +34,9 @@
 					<div class="lecture_main">
 						<h3>쉽게 만드는 커스터드 푸딩!</h3><br>
 						<ul>
-							<li>강 사 : 김초보</li>
-							<li>수강기간 : 3일</li>
+							<li>김초보</li>
+							<li>3일</li>
 							<li>
-							강좌 소개 :<br>
 							푸딩의 기본, 커스터드 푸딩. 이것도 못만들면 다른건 꿈도 꾸지 마세요. 맛은 있으니 후회는 안할 겁니다.
 							</li>
 						</ul>
@@ -52,10 +51,9 @@
 					<div class="lecture_main">
 						<h3>집에서도 만들 수 있는 우유푸딩!!</h3><br>
 						<ul>
-							<li>강 사 : 김중급</li>
-							<li>수강기간 : 5일</li>
+							<li>김중급</li>
+							<li>5일</li>
 							<li>
-							강좌 소개 :<br>
 							특수 조리기구(오븐, 거품기, 기타 등등...)이 없이 집에서 흔히 볼 수 있는 재료와 기구들로 만들 수 있는 우유푸딩 강좌. 솔직히 가성비 생각하면 이게 좋습니다. 맛도 나쁘지 않음.
 							</li>
 						</ul>
@@ -70,10 +68,9 @@
 					<div class="lecture_main">
 						<h3>푸딩의 궁극! 로얄★딸기우유☆ 푸딩</h3><br>
 						<ul>
-							<li>강 사 : 김영상</li>
-							<li>수강기간 : 50일</li>
+							<li>김영상</li>
+							<li>50일</li>
 							<li>
-							강좌 소개 :<br>
 							궁극의 푸딩, 고급 딸기우유 푸딩을 만들 수 있는 절호의 기회. 이것만 만들면 당신의 디저트 인생은 완벽해 질 것이다. 단, 초심자에게 너무 어려울 수 있으니 기초를 갈고 입문 할 것.
 							</li>
 						</ul>
