--- a/HTML/WebContent/3.javascript/Ex03-21_func1.html
+++ b/HTML/WebContent/3.javascript/Ex03-21_func1.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>선언적 함수</title>
-<script type="text/javascript">
+<title>Insert title here</title>
+<script>
 	function compute(){
 		var x = 10;
 		var y = 100;
@@ -11,8 +11,18 @@
 		console.log(result);
 	}
 	compute();
+	
+	function compute2(){
+		var x = 100;
+		var y = 200;
+		var avg = (x+y)/2;
+		return avg;
+	}
+	console.log(compute2());
+	
 </script>
 </head>
 <body>
+
 </body>
 </html>
