--- a/HTML/WebContent/3.javascript/Ex03-22_func2_Anonymous.html
+++ b/HTML/WebContent/3.javascript/Ex03-22_func2_Anonymous.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>익명함수</title>
-<script type="text/javascript">
-	var compute = function (){
+<title>Insert title here</title>
+<script>
+	// 익명 함수
+	var compute = function(){
 		var x = 10;
 		var y = 100;
 		var result = x/y;
@@ -14,5 +15,6 @@
 </script>
 </head>
 <body>
+
 </body>
 </html>
