--- a/HTML/WebContent/3.javascript/Ex03-18_whiledowhile.html
+++ b/HTML/WebContent/3.javascript/Ex03-18_whiledowhile.html
@@ -2,15 +2,14 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>while, do while 문</title>
-<script type="text/javascript">
+<title>Insert title here</title>
+<script>
 	var x = 0;
 	var y = 0;
-	var z = 6;
 	var sum1 = 0;
 	var sum2 = 0;
 	
-	while (x<=5){
+	while(x<=5){
 		sum1 += x;
 		x++;
 	}
@@ -21,13 +20,9 @@
 		y++;
 	}while(y<=5);
 	console.log('y : ' + sum2);
-	
-	do {
-		z++;
-	}while(z<=5);
-	console.log('z : ' + z);
 </script>
 </head>
 <body>
+
 </body>
 </html>
