--- a/HTML/WebContent/3.javascript/Ex03-36_Date.html
+++ b/HTML/WebContent/3.javascript/Ex03-36_Date.html
@@ -2,10 +2,12 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Date</title>
-<script type="text/javascript">
-	var dateObj = new Date(2020,1,14,8,36);
-	var dateInfo = {
+<title>Insert title here</title>
+<script>
+//============ Date ===============
+	
+	var dateObj = new Date(2020,1,14,8,36);	// 년,월,일,시,분
+	var dateInfo = {	// 객체 리터럴
 			year : dateObj.getFullYear(),
 			month : dateObj.getMonth(),
 			date : dateObj.getDate(),
@@ -19,5 +21,6 @@
 </script>
 </head>
 <body>
+
 </body>
 </html>
