--- a/HTML/WebContent/3.javascript/Ex03-35_Random.html
+++ b/HTML/WebContent/3.javascript/Ex03-35_Random.html
@@ -2,19 +2,21 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Math</title>
-<script type="text/javascript">
+<title>Insert title here</title>
+<script>
+//============ Random ===============
+	
 	var lucky = [];
 	var num = 0;
-	for (var i=1;i<=100;i++){
+	for(var i=1;i<=100;i++){
 		lucky.push(i);
 	}
 	num = Math.floor(Math.random()*lucky.length);
-	// 0~99 사이의 값이 들어옴
 	console.log(num);
 	console.log(lucky[num]);
 </script>
 </head>
 <body>
+
 </body>
 </html>
