--- a/HTML/WebContent/3.javascript/Ex03-40_openWeb.html
+++ b/HTML/WebContent/3.javascript/Ex03-40_openWeb.html
@@ -2,16 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>event</title>
-<style>
-
-</style>
-<script type="text/javascript">
+<title>Open Web Page</title>
+<script>
 	window.onload = function(){
 		var bt = document.getElementById('bt');
 		bt.onclick = function(){
-			window.open('https://google.com'
-					,'google', 'width=300,height=300,left=100,right=100');
+			window.open('http://google.com','google',
+					'width=300,height=300,left=100,right=100');
 		}
 	}
 </script>
